# dravr-sciotte

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  ignored-tests-allowlist.toml
.githooks/: commit-msg
.github/workflows/: ci.yml  homebrew.yml  release.yml
crates/dravr-sciotte-mcp/: Cargo.toml
crates/dravr-sciotte-mcp/src/: lib.rs  main.rs  protocol.rs  server.rs  state.rs
crates/dravr-sciotte-mcp/src/tools/: activities.rs  auth.rs  cache.rs  health.rs  mod.rs
crates/dravr-sciotte-mcp/src/transport/: http.rs  mod.rs  stdio.rs
crates/dravr-sciotte-server/: Cargo.toml
crates/dravr-sciotte-server/src/: auth.rs  health.rs  lib.rs  main.rs  router.rs  state.rs  streaming.rs
docs/: configuration.md  credential-login.md
providers/: garmin.toml  strava.toml
providers/strava/: detail_page.md  list_page.md  page_analysis.md
scripts/: garmin-login.sh  strava-email-login.sh  strava-google-login.sh
scripts/js/: click_element.js  dismiss_cookie.js  element_exists.js  enter_password_coords.js  extract_number.js  get_element_center.js  parse_2fa_options.js
src/: auth.rs  browser_utils.rs  cache.rs  config.rs  error.rs  fake_login.rs  js_utils.rs  lib.rs  models.rs  provider.rs  scraper.rs  script_loader.rs  types.rs  vision.rs
static/: test-browser.html
tests/: garmin_health.rs  login_flow.rs  strava_health.rs
tests/fixtures/garmin/: dashboard.html  mfa.html  sign-in.html
tests/fixtures/google/: challenge-number.html  challenge-pk.html  challenge-pwd.html  challenge-selection.html  challenge-totp.html  identifier.html
tests/fixtures/google/challenge/: number.html  pk.html  pwd.html  selection.html
tests/fixtures/strava/: dashboard.html  login.html
