# ABOUTME: Workspace root for dravr-sciotte Strava training scraper
# ABOUTME: Three crates: core library, MCP server library, and unified REST+MCP+CLI server binary

[workspace]
members = [".", "crates/dravr-sciotte-mcp", "crates/dravr-sciotte-server"]

# ============================================================================
# Build Profiles
# ============================================================================

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

# ============================================================================
# Workspace Lint Configuration
# ============================================================================
# Shared across all workspace crates via [lints] workspace = true.
# Individual crates inherit these settings automatically.
#
# ZERO TOLERANCE ENFORCEMENT:
#   cargo clippy (reads this config, applies level = "deny")

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
# Base configuration: Enable clippy lint groups at DENY level
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

# Type conversion casts - allowed when properly validated
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"

# Const fn suggestions - clippy suggests const for methods that can't be const
missing_const_for_fn = "allow"

# Significant drop tightening - false positives with async lock guards
significant_drop_tightening = "allow"

# Module naming - allow repetition for clarity
module_name_repetitions = "allow"

# Multiple dependency versions - unavoidable in some transitive deps
multiple_crate_versions = "allow"

# Missing errors doc - not all error returns need doc comments
missing_errors_doc = "allow"

# must_use candidate - too noisy for builders and constructors
must_use_candidate = "allow"

# return_self_not_must_use - builder pattern methods
return_self_not_must_use = "allow"

# redundant_pub_crate - explicit visibility is clearer
redundant_pub_crate = "allow"

# ============================================================================
# Package Configuration
# ============================================================================

[package]
name = "dravr-sciotte"
version = "0.5.6"
publish = false
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Sport activity scraper with headless Chrome, TOML-configurable providers, and in-memory caching"
repository = "https://github.com/dravr-ai/dravr-sciotte"
homepage = "https://github.com/dravr-ai/dravr-sciotte"
documentation = "https://docs.rs/dravr-sciotte"
keywords = ["scraper", "fitness", "training", "headless-chrome", "sport"]
categories = ["web-programming::http-client", "command-line-utilities"]
readme = "README.md"
exclude = [".claude/", ".githooks/", ".github/", "scripts/*.sh"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
vision = ["dep:embacle"]

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
chromiumoxide = "0.9"
futures = "0.3"
moka = { version = "0.12", features = ["future"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
ring = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1.45", features = ["process", "io-util", "time", "rt", "macros", "fs", "sync"] }
tracing = "0.1"
base64 = "0.22"
dirs = "6"
toml = "0.8"
urlencoding = "2"
embacle = { version = "0.13", optional = true }

[dev-dependencies]
tokio = { version = "1.45", features = ["full", "test-util"] }

[lints]
workspace = true
