# ABOUTME: MCP server crate exposing Strava scraping via Model Context Protocol
# ABOUTME: Supports stdio and HTTP/SSE transports with activity scraping and auth tools
#
# SPDX-License-Identifier: MIT OR Apache-2.0
# Copyright (c) 2026 dravr.ai

[package]
name = "dravr-sciotte-mcp"
version = "0.3.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "MCP server for dravr-sciotte — expose sport activity scraping via Model Context Protocol"
repository = "https://github.com/dravr-ai/dravr-sciotte"
keywords = ["mcp", "scraper", "fitness", "training", "sport"]
categories = ["web-programming::http-server"]
readme = "../../README.md"

[lib]
name = "dravr_sciotte_mcp"
path = "src/lib.rs"

[[bin]]
name = "dravr-sciotte-mcp"
path = "src/main.rs"

[dependencies]
dravr-sciotte = { path = "../..", version = "0.3.1" }
dravr-tronc = "0.1.0"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.45", features = ["full", "test-util"] }

[lints]
workspace = true
