# ABOUTME: Unified REST API + MCP server + CLI for dravr-sciotte Strava scraper
# ABOUTME: Serves auth, activity, health endpoints and MCP over HTTP with CLI commands
#
# SPDX-License-Identifier: MIT OR Apache-2.0
# Copyright (c) 2026 dravr.ai

[package]
name = "dravr-sciotte-server"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Unified REST API + MCP server + CLI for sport activity scraping"
repository = "https://github.com/dravr-ai/dravr-sciotte"
keywords = ["sport", "rest", "mcp", "scraper", "server"]
categories = ["web-programming::http-server"]
readme = "../../README.md"

[lib]
name = "dravr_sciotte_server"
path = "src/lib.rs"

[[bin]]
name = "dravr-sciotte-server"
path = "src/main.rs"

[dependencies]
dravr-sciotte = { path = "../..", version = "0.0.0" }
dravr-sciotte-mcp = { path = "../dravr-sciotte-mcp", version = "0.0.0" }
axum = "0.8"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
subtle = "2"
http = "1.4"

[dev-dependencies]
tokio = { version = "1.45", features = ["full", "test-util"] }

[lints]
workspace = true
